# GATM

./: .gitignore  CMakeLists.txt
src/: Machine.cpp  Machine.hpp  main.cpp
src/instruction/: Add.cpp  Add.hpp  Copy.cpp  Copy.hpp  Div.cpp  Div.hpp  Halt.cpp  Halt.hpp  Immediate.cpp  Immediate.hpp  Instruction.cpp  Instruction.hpp  JumpZero.cpp  JumpZero.hpp  Mul.cpp  Mul.hpp  Not.cpp  Not.hpp  Sub.cpp  Sub.hpp
test/: CMakeLists.txt  testSimple.cpp
